examples/test/testpolicy7180.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7180
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key48: value11
      key16: value3
      key43: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value33
          key13: value24
      podSelector:
        matchLabels:
          key11: value38
          key0: value6
